# OmniBox

./: CMakeLists.txt  CMakeSettings.json  README.md
OmniBoxClient/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
OmniBoxClient/StyleSheet/: stylesheet.qss
OmniBoxClient/src/: LoginWidget.cpp  demand.qrc  main.cpp  mainWindow.cpp
OmniBoxClient/src/ControHub/: ControlHubWindow.cpp
OmniBoxClient/src/CustomUI/: CinemaInputDialog.h
OmniBoxClient/src/Pb/: common.pb.cc  common.pb.h  server_msg.pb.cc  server_msg.pb.h
OmniBoxClient/src/Proto/: common.proto  server_msg.proto
OmniBoxClient/src/SELF_UI/StackPage/FileManager/: FileManagerPage.cpp  FileManagerPage.h
OmniBoxClient/src/SELF_UI/StackPage/GameWidget/: GameWidget.cpp
OmniBoxClient/src/TCP/: TCPMgr.cpp  TCPMgr.h
OmniBoxClient/src/ThreadPool/: ThreadPool.cpp  ThreadPool.h
OmniBoxServer/gateway_server/: GatewayHttpServer.cpp  GatewayTcpServer.cpp  GatewayTcpServer.h
OmniBoxServer/login_server/: CMakeLists.txt
OmniBoxServer/meta_server/: MetaServiceImpl.h
OmniBoxServer/pb/: common.pb.cc  common.pb.h  server_msg.pb.cc  server_msg.pb.h
OmniBoxServer/proto/: common.proto  internal_rpc.proto
OmniBoxServer/rpc_core/src/: MyChannel.cpp
OmniBoxServer/transfer_server/: TransferServiceImpl.h  transfer_server.cpp
OnniBoxServer/: CMakeLists.txt
OnniBoxServer/gateway_server/: GatewayHttpServer.cpp  GatewayTcpServer.cpp  GatewayTcpServer.h  MyGatewayService.h  gateway_server.cpp
OnniBoxServer/meta_server/: MetaServiceImpl.cpp
OnniBoxServer/pb/: login.pb.cc  transfer.pb.cc  transfer.pb.h
OnniBoxServer/rpc_core/src/: MyChannel.cpp  RPCServer.cpp
OnniBoxServer/transfer_server/: CMakeLists.txt  TransferServiceImpl.cpp
OnniBoxServer/www/js/: AuthManager.js  app.js
gateway_server/: GatewayTcpServer.cpp  GatewayTcpServer.h  gateway_server.cpp
login_server/: MyLoginService.cpp  MyLoginService.h  login_server.cpp
meta_server/: CMakeLists.txt  MetaServiceImpl.h  meta_server.cpp
pb/: login.pb.h  meta_service.pb.cc  meta_service.pb.h  transfer.pb.cc  transfer.pb.h
proto/: login.proto  meta_service.proto  transfer.proto
rpc_core/include/: HttpRpcClosure.h  MyChannel.h  RPCServer.h
rpc_core/src/: MyChannel.cpp  RPCServer.cpp
transfer_server/: TransferServiceImpl.cpp  TransferServiceImpl.h  transfer_server.cpp
www/: main.html  uploader.js
www/css/: style.css
www/js/: FileSystemManager.js  OmniUploader.js  app.js
